cluster/kubernetes/network/ingress/internal/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  addresses:
    - value: 10.10.30.80
  listeners:
    # catch all local http -> https
    - name: http-redirect
      hostname: "*.local.cjsolsen.com"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    # catch traffic for the pihole0 dashboard
    - name: pihole0-dashboard
      hostname: pihole.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: pihole-cjsolsen-com
    # catch traffic for the pihole1 dashboard
    - name: pihole1-dashboard
      hostname: pihole1.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: pihole1-cjsolsen-com
    # catch traffic for the pihole2 dashboard
    - name: pihole2-dashboard
      hostname: pihole2.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - name: pihole2-cjsolsen-com
    # catch traffic for the ceph dashboard
    - name: ceph-dashboard
      hostname: ceph.local.cjsolsen.com
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: ceph-cjsolsen-com
