cluster/kubernetes/network/ingress/internal/pihole-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole0-dashboard
  namespace: network
spec:
  parentRefs:
    - name: internal-gateway
      sectionName: pihole0-dashboard
  rules:
    - matches:
      - path:
        type: PathPrefix
        value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /admin
            statusCode: 302
      backendRefs:
        - name: pihole0-web-svc
          port: 80
